--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -176,3 +176,36 @@ a.sidebar-nav-item:focus {
     margin-right: 22rem;
   }
 }
+
+/* Skills
+ *
+ * Format the skills section
+ */
+.skills-section {
+  margin: 20px 0;
+}
+
+.skills {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px; /* Adjust the gap between skills */
+}
+
+.skill {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100px; /* Adjust width as needed */
+  text-align: center;
+}
+
+.skill i {
+  font-size: 40px;
+}
+
+.skill span {
+  margin-top: 5px;
+  font-size: 14px;
+  font-weight: bold;
+}
