--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,4 +1,10 @@
 <div class="sidebar">
+  <div class="btn">
+    <div class="btn__indicator"></div>
+    <div class="btn__icon-container">
+      <i class="btn__icon fas fa-sun"></i> <!-- Default icon -->
+    </div>
+  </div>
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
       <h1>
