--- a/public/css/syntax.css
+++ b/public/css/syntax.css
@@ -1,65 +1,132 @@
 .highlight .hll { background-color: #ffc; }
 .highlight .c { color: #999; } /* Comment */
-.highlight .err { color: #a00; background-color: #faa } /* Error */
+.highlight .err { color: #a00; background-color: #faa; } /* Error */
 .highlight .k { color: #069; } /* Keyword */
-.highlight .o { color: #555 } /* Operator */
+.highlight .o { color: #555; } /* Operator */
 .highlight .cm { color: #09f; font-style: italic } /* Comment.Multiline */
-.highlight .cp { color: #099 } /* Comment.Preproc */
+.highlight .cp { color: #099; } /* Comment.Preproc */
 .highlight .c1 { color: #999; } /* Comment.Single */
 .highlight .cs { color: #999; } /* Comment.Special */
-.highlight .gd { background-color: #fcc; border: 1px solid #c00 } /* Generic.Deleted */
+.highlight .gd { background-color: #fcc; border: 1px solid #c00; } /* Generic.Deleted */
 .highlight .ge { font-style: italic } /* Generic.Emph */
-.highlight .gr { color: #f00 } /* Generic.Error */
+.highlight .gr { color: #f00; } /* Generic.Error */
 .highlight .gh { color: #030; } /* Generic.Heading */
-.highlight .gi { background-color: #cfc; border: 1px solid #0c0 } /* Generic.Inserted */
-.highlight .go { color: #aaa } /* Generic.Output */
+.highlight .gi { background-color: #cfc; border: 1px solid #0c0; } /* Generic.Inserted */
+.highlight .go { color: #aaa; } /* Generic.Output */
 .highlight .gp { color: #009; } /* Generic.Prompt */
 .highlight .gs { } /* Generic.Strong */
 .highlight .gu { color: #030; } /* Generic.Subheading */
-.highlight .gt { color: #9c6 } /* Generic.Traceback */
+.highlight .gt { color: #9c6; } /* Generic.Traceback */
 .highlight .kc { color: #069; } /* Keyword.Constant */
 .highlight .kd { color: #069; } /* Keyword.Declaration */
 .highlight .kn { color: #069; } /* Keyword.Namespace */
 .highlight .kp { color: #069 } /* Keyword.Pseudo */
 .highlight .kr { color: #069; } /* Keyword.Reserved */
 .highlight .kt { color: #078; } /* Keyword.Type */
-.highlight .m { color: #f60 } /* Literal.Number */
-.highlight .s { color: #d44950 } /* Literal.String */
-.highlight .na { color: #4f9fcf } /* Name.Attribute */
-.highlight .nb { color: #366 } /* Name.Builtin */
+.highlight .m { color: #f60; } /* Literal.Number */
+.highlight .s { color: #d44950; } /* Literal.String */
+.highlight .na { color: #4f9fcf; } /* Name.Attribute */
+.highlight .nb { color: #366; } /* Name.Builtin */
 .highlight .nc { color: #0a8; } /* Name.Class */
-.highlight .no { color: #360 } /* Name.Constant */
-.highlight .nd { color: #99f } /* Name.Decorator */
+.highlight .no { color: #360; } /* Name.Constant */
+.highlight .nd { color: #99f; } /* Name.Decorator */
 .highlight .ni { color: #999; } /* Name.Entity */
 .highlight .ne { color: #c00; } /* Name.Exception */
-.highlight .nf { color: #c0f } /* Name.Function */
-.highlight .nl { color: #99f } /* Name.Label */
+.highlight .nf { color: #c0f; } /* Name.Function */
+.highlight .nl { color: #99f; } /* Name.Label */
 .highlight .nn { color: #0cf; } /* Name.Namespace */
 .highlight .nt { color: #2f6f9f; } /* Name.Tag */
-.highlight .nv { color: #033 } /* Name.Variable */
+.highlight .nv { color: #033; } /* Name.Variable */
 .highlight .ow { color: #000; } /* Operator.Word */
-.highlight .w { color: #bbb } /* Text.Whitespace */
-.highlight .mf { color: #f60 } /* Literal.Number.Float */
-.highlight .mh { color: #f60 } /* Literal.Number.Hex */
-.highlight .mi { color: #f60 } /* Literal.Number.Integer */
-.highlight .mo { color: #f60 } /* Literal.Number.Oct */
-.highlight .sb { color: #c30 } /* Literal.String.Backtick */
-.highlight .sc { color: #c30 } /* Literal.String.Char */
+.highlight .w { color: #bbb; } /* Text.Whitespace */
+.highlight .mf { color: #f60; } /* Literal.Number.Float */
+.highlight .mh { color: #f60; } /* Literal.Number.Hex */
+.highlight .mi { color: #f60; } /* Literal.Number.Integer */
+.highlight .mo { color: #f60; } /* Literal.Number.Oct */
+.highlight .sb { color: #c30; } /* Literal.String.Backtick */
+.highlight .sc { color: #c30; } /* Literal.String.Char */
 .highlight .sd { color: #c30; font-style: italic } /* Literal.String.Doc */
-.highlight .s2 { color: #c30 } /* Literal.String.Double */
+.highlight .s2 { color: #c30; } /* Literal.String.Double */
 .highlight .se { color: #c30; } /* Literal.String.Escape */
-.highlight .sh { color: #c30 } /* Literal.String.Heredoc */
-.highlight .si { color: #a00 } /* Literal.String.Interpol */
-.highlight .sx { color: #c30 } /* Literal.String.Other */
-.highlight .sr { color: #3aa } /* Literal.String.Regex */
-.highlight .s1 { color: #c30 } /* Literal.String.Single */
-.highlight .ss { color: #fc3 } /* Literal.String.Symbol */
-.highlight .bp { color: #366 } /* Name.Builtin.Pseudo */
-.highlight .vc { color: #033 } /* Name.Variable.Class */
-.highlight .vg { color: #033 } /* Name.Variable.Global */
-.highlight .vi { color: #033 } /* Name.Variable.Instance */
-.highlight .il { color: #f60 } /* Literal.Number.Integer.Long */
+.highlight .sh { color: #c30; } /* Literal.String.Heredoc */
+.highlight .si { color: #a00; } /* Literal.String.Interpol */
+.highlight .sx { color: #c30; } /* Literal.String.Other */
+.highlight .sr { color: #3aa; } /* Literal.String.Regex */
+.highlight .s1 { color: #c30; } /* Literal.String.Single */
+.highlight .ss { color: #fc3; } /* Literal.String.Symbol */
+.highlight .bp { color: #366; } /* Name.Builtin.Pseudo */
+.highlight .vc { color: #033; } /* Name.Variable.Class */
+.highlight .vg { color: #033; } /* Name.Variable.Global */
+.highlight .vi { color: #033; } /* Name.Variable.Instance */
+.highlight .il { color: #f60; } /* Literal.Number.Integer.Long */
 
 .css .o,
 .css .o + .nt,
 .css .nt + .nt { color: #999; }
+
+/* Dark theme for code blocks */
+.dark-mode .highlight .hll { background-color: #444; } /* Highlighted line */
+.dark-mode .highlight .c { color: #777; } /* Comment */
+.dark-mode .highlight .err { color: #f00; background-color: #400; } /* Error */
+.dark-mode .highlight .k { color: #0f0; } /* Keyword */
+.dark-mode .highlight .o { color: #ccc; } /* Operator */
+.dark-mode .highlight .cm { color: #0af; font-style: italic; } /* Comment.Multiline */
+.dark-mode .highlight .cp { color: #0af; } /* Comment.Preproc */
+.dark-mode .highlight .c1 { color: #777; } /* Comment.Single */
+.dark-mode .highlight .cs { color: #777; } /* Comment.Special */
+.dark-mode .highlight .gd { background-color: #844; border: 1px solid #600; } /* Generic.Deleted */
+.dark-mode .highlight .ge { font-style: italic; } /* Generic.Emph */
+.dark-mode .highlight .gr { color: #f00; } /* Generic.Error */
+.dark-mode .highlight .gh { color: #0f0; } /* Generic.Heading */
+.dark-mode .highlight .gi { background-color: #484; border: 1px solid #080; } /* Generic.Inserted */
+.dark-mode .highlight .go { color: #aaa; } /* Generic.Output */
+.dark-mode .highlight .gp { color: #0f0; } /* Generic.Prompt */
+.dark-mode .highlight .gs { } /* Generic.Strong */
+.dark-mode .highlight .gu { color: #0f0; } /* Generic.Subheading */
+.dark-mode .highlight .gt { color: #6f9; } /* Generic.Traceback */
+.dark-mode .highlight .kc { color: #0f0; } /* Keyword.Constant */
+.dark-mode .highlight .kd { color: #0f0; } /* Keyword.Declaration */
+.dark-mode .highlight .kn { color: #0f0; } /* Keyword.Namespace */
+.dark-mode .highlight .kp { color: #0f0; } /* Keyword.Pseudo */
+.dark-mode .highlight .kr { color: #0f0; } /* Keyword.Reserved */
+.dark-mode .highlight .kt { color: #0f0; } /* Keyword.Type */
+.dark-mode .highlight .m { color: #f90; } /* Literal.Number */
+.dark-mode .highlight .s { color: #f90; } /* Literal.String */
+.dark-mode .highlight .na { color: #9cf; } /* Name.Attribute */
+.dark-mode .highlight .nb { color: #36c; } /* Name.Builtin */
+.dark-mode .highlight .nc { color: #0af; } /* Name.Class */
+.dark-mode .highlight .no { color: #c0c; } /* Name.Constant */
+.dark-mode .highlight .nd { color: #99f; } /* Name.Decorator */
+.dark-mode .highlight .ni { color: #777; } /* Name.Entity */
+.dark-mode .highlight .ne { color: #f00; } /* Name.Exception */
+.dark-mode .highlight .nf { color: #f0c; } /* Name.Function */
+.dark-mode .highlight .nl { color: #99f; } /* Name.Label */
+.dark-mode .highlight .nn { color: #0cf; } /* Name.Namespace */
+.dark-mode .highlight .nt { color: #6cf; } /* Name.Tag */
+.dark-mode .highlight .nv { color: #0cc; } /* Name.Variable */
+.dark-mode .highlight .ow { color: #ccc; } /* Operator.Word */
+.dark-mode .highlight .w { color: #bbb; } /* Text.Whitespace */
+.dark-mode .highlight .mf { color: #f90; } /* Literal.Number.Float */
+.dark-mode .highlight .mh { color: #f90; } /* Literal.Number.Hex */
+.dark-mode .highlight .mi { color: #f90; } /* Literal.Number.Integer */
+.dark-mode .highlight .mo { color: #f90; } /* Literal.Number.Oct */
+.dark-mode .highlight .sb { color: #c60; } /* Literal.String.Backtick */
+.dark-mode .highlight .sc { color: #c60; } /* Literal.String.Char */
+.dark-mode .highlight .sd { color: #c60; font-style: italic; } /* Literal.String.Doc */
+.dark-mode .highlight .s2 { color: #c60; } /* Literal.String.Double */
+.dark-mode .highlight .se { color: #c60; } /* Literal.String.Escape */
+.dark-mode .highlight .sh { color: #c60; } /* Literal.String.Heredoc */
+.dark-mode .highlight .si { color: #f00; } /* Literal.String.Interpol */
+.dark-mode .highlight .sx { color: #c60; } /* Literal.String.Other */
+.dark-mode .highlight .sr { color: #a60; } /* Literal.String.Regex */
+.dark-mode .highlight .s1 { color: #c60; } /* Literal.String.Single */
+.dark-mode .highlight .ss { color: #fc6; } /* Literal.String.Symbol */
+.dark-mode .highlight .bp { color: #36c; } /* Name.Builtin.Pseudo */
+.dark-mode .highlight .vc { color: #0cc; } /* Name.Variable.Class */
+.dark-mode .highlight .vg { color: #0cc; } /* Name.Variable.Global */
+.dark-mode .highlight .vi { color: #0cc; } /* Name.Variable.Instance */
+.dark-mode .highlight .il { color: #f90; } /* Literal.Number.Integer.Long */
+
+.dark-mode .css .o,
+.dark-mode .css .o + .nt,
+.dark-mode .css .nt + .nt { color: #777; }
