removed artstatoin & modified license

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -43,14 +43,11 @@
       <a href="https://mdoradom.itch.io">
         <img src="/assets/icons/itch-io.svg" alt="Itch.io">
       </a>
-      <a href="https://www.artstation.com/themariogold">
-        <img src="/assets/icons/artstation.svg" alt="Artstation">
-      </a>
     </div>
 
     <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
 
-    <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
+    <p style="font-size: 12px;">&copy; {{ site.time | date: '%Y' }} Mario Dorado Martínez. Hosted by <a href="https://pages.github.com/"> GitHub Pages</a>. Website<a href="https://github.com/mdoradom/mdoradom"> source code on GitHub</a>.</p>
 
     <div class="btn">
       <div class="btn__indicator"></div>
