fix paths for baseurl

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,8 @@
   </head>
 
   <body>
-    <script src="/public/js/theme-toggle.js"></script>
-    <script src="/public/js/toc.js"></script>
+    <script src="{{ site.baseurl }}/public/js/theme-toggle.js"></script>
+    <script src="{{ site.baseurl }}/public/js/toc.js"></script>
     {% include sidebar.html %}
 
     <div class="content container">
