--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,7 @@
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
       <h1>
-        <a href="{{ site.baseurl }}">
+        <a href="{{ site.baseurl }}/">
           {{ site.title }}
         </a>
       </h1>
@@ -11,7 +11,7 @@
 
     <nav class="sidebar-nav">
 
-      <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}">About</a>
+      <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}/">About</a>
 
       {% comment %}
         The code below dynamically generates a sidebar nav of pages with
@@ -22,7 +22,7 @@
       {% for node in pages_list %}
         {% if node.title != null %}
           {% if node.layout == "page" %}
-            <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
+            <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ site.baseurl }}{{ node.url }}">{{ node.title }}</a>
           {% endif %}
         {% endif %}
       {% endfor %}
@@ -32,16 +32,16 @@
 
     <div class="sidebar-icons">
       <a href="mailto:mariodoradomartinez@gmail.com">
-        <img src="/assets/icons/gmail.svg" alt="Gmail">
+        <img src="{{ site.baseurl }}/assets/icons/gmail.svg" alt="Gmail">
       </a>
       <a href="https://www.linkedin.com/in/mario-dorado-martinez">
-        <img src="/assets/icons/linkedin.svg" alt="LinkedIn">
+        <img src="{{ site.baseurl }}/assets/icons/linkedin.svg" alt="LinkedIn">
       </a>
       <a href="https://github.com/mdoradom">
-        <img src="/assets/icons/github.svg" alt="GitHub">
+        <img src="{{ site.baseurl }}/assets/icons/github.svg" alt="GitHub">
       </a>
       <a href="https://mdoradom.itch.io">
-        <img src="/assets/icons/itch-io.svg" alt="Itch.io">
+        <img src="{{ site.baseurl }}/assets/icons/itch-io.svg" alt="Itch.io">
       </a>
     </div>
 
