--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,7 +27,7 @@
         {% endif %}
       {% endfor %}
 
-      <a class="sidebar-nav-item" href="{{ site.download.cv }}">Download CV</a>
+      <a class="sidebar-nav-item" href="{{ site.baseurl }}/{{ site.download.cv }}">Download CV</a>
     </nav>
 
     <div class="sidebar-icons">
