--- a/_layouts/error.html
+++ b/_layouts/error.html
@@ -13,12 +13,9 @@
     <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
 </head>
 <body class="theme-light">
-    <div class="container">
-        {% include sidebar.html %}
+    <div class="error">
         <main class="content">
             {{ content }}
         </main>
     </div>
-    <script src="{{ "/assets/js/theme-toggle.js" | relative_url }}"></script>
-</body>
 </html>
