fixed links and paths

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -48,16 +48,16 @@
     <p class="license">&copy; {{ site.time | date: '%Y' }} Mario Dorado Martínez. {% t global.license %} {{ site.license }}</p>
     <div class="social-links">
       <a href="{{ site.github_url }}" target="_blank" rel="noopener noreferrer">
-        <img src="assets/icons/github-white.svg" alt="GitHub" class="social-icon">
+      <img src="{{ site.baseurl_root }}/assets/icons/github-white.svg" alt="GitHub" class="social-icon">
       </a>
       <a href="{{ site.linkedin_url }}" target="_blank" rel="noopener noreferrer">
-        <img src="assets/icons/linkedin-white.svg" alt="LinkedIn" class="social-icon">
+      <img src="{{ site.baseurl_root }}/assets/icons/linkedin-white.svg" alt="LinkedIn" class="social-icon">
       </a>
-      <a href="{{ site.twitter_url }}" target="_blank" rel="noopener noreferrer">
-        <img src="assets/icons/itchdotio-white.svg" alt="Twitter" class="social-icon">
+      <a href="{{ site.itchio_url }}" target="_blank" rel="noopener noreferrer">
+      <img src="{{ site.baseurl_root }}/assets/icons/itchdotio-white.svg" alt="Twitter" class="social-icon">
       </a>
       <a href="{{ site.mastodon_url }}" target="_blank" rel="noopener noreferrer">
-        <img src="assets/icons/mastodon-white.svg" alt="Mastodon" class="social-icon">
+      <img src="{{ site.baseurl_root }}/assets/icons/mastodon-white.svg" alt="Mastodon" class="social-icon">
       </a>
     </div>
   </div>
